# vstp-demo

./: .gitignore  ARCHITECTURE_GUIDE.md  CSV_COLUMNS_FOR_AI.md  Cargo.toml  DEMO.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  ML_MODEL_QUICK_REFERENCE.md  ML_MODEL_RECOMMENDATIONS.md  ML_TRAINING_DATA_SCHEMA.md  QUICK_START.md  STEP_1_2_COMPLETION.md  TESTING_GUIDE.md  claude-detailed-alanysis.md  detailed_code_analysis.md  readme.md
benches/: varint_benchmark.rs
examples/: DIRECT_IP_SETUP.md  NGROK_SETUP.md  QUICK_DEMO.md  ai_security_demo.rs  export_training_data.rs  find_ip.sh  simple_client.rs  simple_client_direct_ip.rs  simple_client_ngrok.rs  simple_server.rs  simple_server_ngrok.rs  simple_udp_client.rs  simple_udp_server.rs
examples/compare/: README.md  compare_metrics.rs  http_client.rs  http_server.rs
src/: easy.rs  encoding.rs  frame.rs  lib.rs  main.rs  types.rs
src/codec/: mod.rs
src/core/: mod.rs
src/core/encoding/: binary.rs  mod.rs  varint.rs
src/core/frame/: builder.rs  mod.rs  parser.rs  types.rs
src/core/types/: error.rs  flags.rs  mod.rs
src/net/: addr.rs  mod.rs  socket.rs
src/protocol/: mod.rs
src/protocol/compression/: mod.rs
src/protocol/extensions/: handler.rs  mod.rs  registry.rs
src/security/: mod.rs
src/security/ai/: detector.rs  mod.rs  models.rs  monitor.rs  patterns.rs
src/security/crc/: mod.rs
src/security/tls/: mod.rs
src/transport/tcp/: client.rs  mod.rs  server.rs
src/transport/udp/: client.rs  mod.rs  reassembly.rs  server.rs
src/utils/: buffer.rs  mod.rs  pool.rs
tests/: ai_detection_tests.rs  combined_transport_tests.rs  complex_data_transfer_tests.rs  connection_tests.rs  frame_tests.rs  tcp_integration_tests.rs  udp_integration_tests.rs
tests/integration/: encoding_integration_tests.rs
