[package]
name = "vstp"
version = "0.2.1"
edition = "2021"
authors = ["Vishu Pratap <vishurizz0@gmail.com>"]
description = "VSTP - Vishu's Secure Transfer Protocol: A fast, secure, and extensible binary protocol for TCP and UDP"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vishuRizz/VSTP-Vishus-Secure-Transfer-Protocol"
homepage = "https://github.com/vishuRizz/VSTP-Vishus-Secure-Transfer-Protocol"
documentation = "https://docs.rs/vstp"
readme = "README.md"
keywords = ["protocol", "tcp", "udp", "networking", "binary"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
bytes = "1.5"
byteorder = "1.5"
thiserror = "1.0"
bitflags = "2.4"
crc-any = "2.4"
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tracing = "0.1"
futures = "0.3"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
test-case = "3.1"

[[bench]]
name = "varint_benchmark"
harness = false